# RichConsole.py

./: .gitlab-ci.yml  ReadMe.md  RichConsole.hx  RichConsole.py  Tutorial.ipynb  setup.cfg
.ci/: pythonPackagesToInstallFromGit.txt
tests/: tests.py
