[metadata]
name = RichConsole
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/RichConsole.py
description = A library to output rich text into console
long_description = file: ReadMe.md
keywords = color, ANSI, rich text, formatting
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing

[options]
python_requires = >=3.4
zip_safe = True
py_modules = RichConsole
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests.Tests

[options.extras_require]
colorama = colorama @ git+https://github.com/tartley/colorama.git
plumbum = plumbum @ git+https://github.com/tomerfiliba/plumbum.git
colored = colored @ git+https://gitlab.com/dslackw/colored.git

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
